Prevent zoom on iOS caused by font size less than 16px

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  font-size: 14px;
+  font-size: 16px;
   font-family: sans-serif;
   background: var(--white);
   color: var(--black);
